Fixed social icons alignment

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -34,7 +34,8 @@ a {
 
 /* Social component */
 
-.social {
+.social-container {
+  width: 100px;
   align-items: center;
   padding: 4px;
   display: flex;
